Update index.html updated blog style

--- a/index.html
+++ b/index.html
@@ -173,35 +173,45 @@
     </p>
   </section>
 
+
   <!-- BLOG -->
-  <section id="blog" class="section">
-    <h2 class="section-title">Latest Articles</h2>
-    <p class="section-sub">Insights to help you start and grow your online business</p>
+<section id="blog" class="section">
+  <h2 class="section-title">Latest Articles</h2>
+  <p class="section-sub">Insights to help you start and grow your online business</p>
 
-    <div class="articles-grid">
-      <a href="/blog/start-online-business.html" class="article-card">
-        <img src="/blog/image/start-online-business.jpg" />
-        <h3>How to Start a Successful Online Business in 2025</h3>
-        <p>Practical steps for launching a profitable online business.</p>
-      </a>
+  <div class="services-grid" style="margin-top: 2rem;">
 
-      <a href="/blog/ai-automation-solopreneurs-2025.html" class="article-card">
-        <img src="/blog/image/the-rise-of-AI.jpg" />
-        <h3>The Rise of AI Automation for Solopreneurs</h3>
-        <p>How AI transforms workflows for small creators.</p>
-      </a>
+    <a href="/blog/start-online-business.html" class="service-card" style="text-align:center;">
+      <img src="/blog/image/start-online-business.jpg" alt="Online Business" />
+      <h3>How to Start a Successful Online Business in 2025</h3>
+      <p style="color:#475569; font-size:0.95rem; margin-top:0.5rem;">
+        Practical steps for launching a profitable online business.
+      </p>
+    </a>
 
-      <a href="/blog/digital-marketing-strategies-2025.html" class="article-card">
-        <img src="/blog/image/best-digital-marketing-strategies.jpg" />
-        <h3>Digital Marketing Strategies for 2025</h3>
-        <p>Beginner-friendly visibility and growth techniques.</p>
-      </a>
-    </div>
+    <a href="/blog/ai-automation-solopreneurs-2025.html" class="service-card" style="text-align:center;">
+      <img src="/blog/image/the-rise-of-AI.jpg" alt="AI Automation" />
+      <h3>The Rise of AI Automation for Solopreneurs</h3>
+      <p style="color:#475569; font-size:0.95rem; margin-top:0.5rem;">
+        How AI transforms workflows for small creators.
+      </p>
+    </a>
 
-    <div class="cta-row">
-      <a href="/blog/index-blog.html" class="btn primary">View All Articles</a>
-    </div>
-  </section>
+    <a href="/blog/digital-marketing-strategies-2025.html" class="service-card" style="text-align:center;">
+      <img src="/blog/image/best-digital-marketing-strategies.jpg" alt="Digital Marketing" />
+      <h3>Digital Marketing Strategies for 2025</h3>
+      <p style="color:#475569; font-size:0.95rem; margin-top:0.5rem;">
+        Beginner-friendly visibility and growth techniques.
+      </p>
+    </a>
+
+  </div>
+
+  <div class="cta-row" style="margin-top:2.5rem;">
+    <a href="/blog/index-blog.html" class="btn primary">View All Articles</a>
+  </div>
+</section>
+
 
   <!-- TOOLS -->
   <section id="tools" class="section">
