Update index.html added center

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   </section>
 
   <!-- SERVICES -->
-  <section id="services" class="section">
+  <section id="services" class="section" style="text-align:center;">
     <h2 class="section-title">Our Services and Products</h2>
     <p class="section-sub">Complete solutions for your digital transformation</p>
 
@@ -282,7 +282,7 @@
         <h3>Website Design</h3>
       </div>
 
-      <a href="/services/google-business-profile-optimization.html" class="service-card">
+      <a href="/services/google-business-profile-optimization.html" class="service-card" style="text-align:center;">
         <img src="/services/images/google-business.jpg" />
         <h3>Google Business Profile Optimization</h3>
       </a>
